syntax = "proto3";

package chord;

service ChordService {
    rpc FindSuccessor (ID) returns (NodeInfo);
    rpc GetPredecessor (Empty) returns (NodeInfo);
    rpc Notify (NodeInfo) returns (Empty);
    rpc Ping (Empty) returns (Empty);


    rpc Put (KeyValue) returns (Empty);
    rpc Get (Key) returns (Value);
    rpc Delete (Key) returns (Empty);
}


message Empty {}


message ID {
    uint64 id = 1;
}


message Key {
    string key = 1;
}


message Value {
    string value = 1;
}


message KeyValue {
    string key = 1;
    string value = 2;
}


message NodeInfo {
    uint64 id = 1;
    string address = 2;
}